switched to java 17, nitrite removed, tinylog v2 instead v1